tests/diagnostics/non_int_index.stderr
error[E0192]: 添字には整数型が必要です (実際 f64)
 --> tests/diagnostics/non_int_index.kal:2:30
  |
2 | fn f(a: [i64; 3]) -> i64 = a[1.0];
  |                              ^^^
1 個のエラーで中断しました
