tests/diagnostics/non_int_index.kal
# An array index must be an integer.
fn f(a: [i64; 3]) -> i64 = a[1.0];
